# binary-reconstructor

./: .gitignore  Cargo.toml  Makefile  README.md  reconstructed_cat.c  reconstructed_ls.c  reconstructed_md5sum.c  reconstructed_yes.c  reconstructed_yes_functional.c  submit.sh
ebpf/: ringbuf_reader  ringbuf_reader.c  syscall_tracer.bpf.c  uprobe_reader  uprobe_reader.c  uprobe_tracer.bpf.c  vmlinux.h
src/: cfg.rs  dataflow.rs  emitter.rs  insn.rs  ir.rs  lifter.rs  main.rs  phase2.rs  phase3.rs  phase4.rs  phase5.rs  phase5_codegen.rs
