[package]
name = "binary-reconstructor"
version = "0.1.0"
edition = "2021"

[dependencies]
nix = { version = "0.31.3", features = ["process", "ptrace"] }
libc = "0.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
capstone = "0.14.0"
regex = "1.10"
aya = "0.13.1"
aya-ebpf = "0.1.1"
aya-log = "0.2.1"
aya-log-ebpf = "0.1.0"
libbpf-rs = "0.26.2"

[build-dependencies]
aya-build = "0.1.3"
